# xbmc-addon-xvdr

./: .gitignore  Makefile.am  configure.ac  configure.in
addons/library.xbmc.addon/: dlfcn-win32.c
addons/pvr.vdr.xvdr/: .gitignore  Makefile.am
data/: .gitignore
debian/: .gitignore
src/libxvdr/src/: .gitignore  Makefile.am  clientinterface.cpp  demux.cpp  msgpacket.cpp  os-config.h  session.cpp  thread.cpp
src/libxvdr/tests/: .gitignore  Makefile.am
src/xvdr/: .gitignore  Makefile.am  XVDRResponsePacket.cpp  XVDRSession.cpp
src/xvdr/dialogs/: Makefile.am
